fix score-display-percent on mobile

--- a/src/app/components/score-display-percent/score-display-percent.component.scss
+++ b/src/app/components/score-display-percent/score-display-percent.component.scss
@@ -5,6 +5,8 @@
   cursor: ew-resize;
   user-select: none;
 
+  touch-action: none;
+
   svg {
     transform: rotate(0deg);
   }
